# wolfgang_robot

./: README.md
wolfgang_animations/animations/falling/: falling_front.json  (+1 more)
wolfgang_description/config/: wolfgang.rviz
wolfgang_description/urdf/: config.json  l_hip_1.stl  l_shoulder.stl  llb.stl  llf.stl  lrb.stl  lrf.stl  r_foot.stl  r_hip_1.stl  r_lower_leg.stl  rlb.stl  rlf.stl  robot.urdf  rrb.stl  rrf.stl  torso.stl
wolfgang_ik/: CMakeLists.txt  package.xml
wolfgang_ik/include/: ik.h
wolfgang_ik/include/wolfgang_ik/: ik.h
wolfgang_ik/src/: ik.cpp
wolfgang_ik/tests/: test_ik.cpp
wolfgang_moveit_config/config/: kinematics.yaml
wolfgang_pybullet_sim/config/: config.yaml
wolfgang_pybullet_sim/wolfgang_pybullet_sim/: ros_interface.py
wolfgang_robocup_api/config/: team.json
wolfgang_robocup_api/docker/: Dockerfile
wolfgang_robocup_api/launch/: robocup_teamplayer.launch
wolfgang_webots_sim/launch/: fake_localization.launch
wolfgang_webots_sim/protos/: DummyObstacle.proto  FakeCamera.proto  RobotAppearance.proto  SoccerBall.proto  Wolfgang.proto  WolfgangDummy.proto  WolfgangOptimization.proto  WolfgangRobocup.proto
wolfgang_webots_sim/scripts/: compute_joint_parameter.py  count_vertices.py  localization_faker.py
wolfgang_webots_sim/wolfgang_webots_sim/: webots_robot_controller.py  webots_supervisor_controller.py
wolfgang_webots_sim/worlds/: .flat_world.wbproj  1_bot.wbt  auto_recog.wbt  deep_footsteps_wolfgang.wbt  deep_quintic_wolfgang.wbt  no_ball_flat.wbt  recog.wbt  robot_supervisor.wbt  walk_optim_darwin.wbt  walk_optim_nao.wbt  walk_optim_op3.wbt  walk_optim_robotis_op2.wbt  walk_optim_wolfgang.wbt
(+63 files in other folders)
