<?xml version="1.0"?>
<package format="2">
  <name>wolfgang_ik</name>
  <version>1.0.0</version>
  <description>An analytic inverse kinematic for the wolfgang robot</description>

  <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>

  <license>MIT</license>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="7engelke@informatik.uni-hamburg.de">Timon Engelke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotconv</depend>
  <depend>moveit_ros_planning</depend>
  <depend>bitbots_docs</depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>c++</language>
    </bitbots_documentation>
  </export>
</package>
